src/components/css/post-content.css
/* Normalize */
/* ------------------------------------ */

.post-content {
    line-height: var(--vr-3);
    min-width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    margin: 0 auto;
    line-height: 1.75em;
}

.post-content audio,
.post-content canvas,
.post-content iframe,
.post-content img,
.post-content svg,
.post-content video {
    vertical-align: middle;
}

.post-content fieldset {
    margin: 0;
    padding: 0;
    border: 0;
}

.post-content textarea {
    resize: vertical;
}

.post-content p,
.post-content ul,
.post-content ol,
.post-content dl,
.post-content blockquote {
    margin: var(--vr-3) 0 0;
}

.post-content>p:first-child {
    margin: var(--vr-1) 0 0;
    font-size: 1.9rem;
    line-height: var(--vr-4);
}

.post-content ol,
.post-content ul {
    padding-left: 1.3em;
    padding-right: 1.5em;
}

.post-content ol ol,
.post-content ul ul,
.post-content ul ol,
.post-content ol ul {
    margin: var(--vr-2) 0 0;
}

.post-content ul {
    list-style: disc;
}

.post-content ol {
    list-style: decimal;
}

.post-content ul,
.post-content ol {
    max-width: 100%;
}

.post-content li {
    margin: var(--vr-1) 0 0;
    padding-left: 0.3em;
    line-height: 1.6em;
}

.post-content dt {
    float: left;
    margin: 0 20px 0 0;
    width: 120px;
    color: var(--darkgrey);
    font-weight: 500;
    text-align: right;
}

.post-content dd {
    margin: 0 0 5px 0;
    text-align: left;
}

.post-content blockquote {
    margin: 1.5em 0;
    padding: 0 1.6em 0 1.6em;
    border-left: var(--whitegrey) 0.5em solid;
}

.post-content blockquote p {
    margin: 0.8em 0;
    font-size: 1.2em;
    font-weight: 300;
}

.post-content blockquote small {
    display: inline-block;
    margin: 0.8em 0 0.8em 1.5em;
    font-size: 0.9em;
    opacity: 0.8;
}
/* Quotation marks */
.post-content blockquote small:before {
    content: "\2014 \00A0";
}

.post-content blockquote cite {
    font-weight: bold;
}
.post-content blockquote cite a {
    font-weight: normal;
}

.post-content div {
    min-width: 100%;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6,
.post-content p,
.post-content ul,
.post-content ol,
.post-content dl,
.post-content pre,
.post-content blockquote,
.post-full-comments,
.footnotes {
    min-width: 100%;
}

.post-content li {
    word-break: break-word;
}

.post-content li p {
    margin: 0;
}

/*TODO: use color-mod*/
.post-content a {
    color: #2FA1E0; /*should be blue-d2*/
    word-break: break-word;
    text-decoration: none;
    box-shadow: rgba(62, 176, 239, 0.4) 0 -1px 0 inset; 
    transition: all 0.2s ease;
}

.post-content a:hover {
    color: #2497D6;
    box-shadow: var(--blue) 0 -1px 0 inset;
    text-decoration: none;
}

.post-content strong,
.post-content em {
    color: color(var(--darkgrey) l(-5%));
}

.post-content small {
    display: inline-block;
    line-height: 1.6em;
}

.post-content li:first-child {
    margin-top: 0;
}

.post-content img,
.post-content video {
    display: block;
    margin: 1.5em auto;
    max-width: 1040px;
    height: auto;
}


/* Full bleed images (#full)
Super neat trick courtesy of @JoelDrapper
Usage (In Ghost edtior):
![img](/some/image.jpg#full)
*/
.post-content img[src$="#full"] {
    max-width: none;
    width: 100vw;
}


/* Image captions
Usage (In Ghost editor):
![img](/some/image.jpg)
<small>Your image caption</small>
*/
.post-content img + br + small {
    display: block;
    margin-top: -3em;
    margin-bottom: 1.5em;
    text-align: center;
}


/* Override third party iframe styles */
.post-content iframe {
    margin: 0 auto !important;
}

.post-content blockquote {
    margin: 0 0 1.5em;
    padding: 0 1.5em;
    border-left: #3eb0ef 3px solid;
}

.post-content blockquote p {
    margin: 0 0 1em 0;
    color: inherit;
    font-size: inherit;
    line-height: inherit;
    font-style: italic;
}

.post-content blockquote p:last-child {
    margin-bottom: 0;
}

.post-content code {
    padding: 0 5px 2px;
    font-size: 0.8em;
    line-height: 1em;
    font-weight: 400!important;
    background: var(--whitegrey);
    border-radius: 3px;
}

.post-content pre {
    overflow-x: auto;
    margin: 1.5em 0 3em;
    padding: 20px;
    max-width: 100%;
    border: color(var(--darkgrey) l(-10%)) 1px solid;
    color: var(--whitegrey);
    font-size: 1.4rem;
    line-height: 1.5em;
    background: color(var(--darkgrey) l(-3%));
    border-radius: 5px;
}

.post-content pre code {
    padding: 0;
    font-size: inherit;
    line-height: inherit;
    background: transparent;
}

.post-content pre code * {
    color: inherit;
}

.post-content .fluid-width-video-wrapper {
    margin: 1.5em 0 3em;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
    color: inherit;
}

.post-content > h1:first-child,
.post-content > h2:first-child,
.post-content > h3:first-child,
.post-content > h4:first-child,
.post-content > h5:first-child,
.post-content > h6:first-child {
    margin: var(--vr-4) 0 0;
}

.post-content h1 {
    font-size: 4.4rem;
    font-weight: 300;
    line-height: var(--vr-8);
    letter-spacing: -0.2px;
    margin: var(--vr-8) 0 0;
}

@media (max-width: 500px) {
    .post-content h1 {
        font-size: 2.8rem;
    }
}

.post-content h2 {
    font-size: 3.3rem;
    font-weight: 600;
    line-height: var(--vr-6);
    margin: var(--vr-7) 0 0;
}
@media (max-width: 500px) {
    .post-content h2 {
        font-size: 2.6rem;
    }
}

.post-content h3 {
    font-size: 2.5rem;
    font-weight: 500;
    line-height: var(--vr-5);
    margin: var(--vr-6) 0 0;
    letter-spacing: -0.4px;
}
@media (max-width: 500px) {
    .post-content h3 {
        font-size: 2.2rem;
    }
}

.post-content h4 {
    font-size: 1.9rem;
    font-weight: 500;
    line-height: var(--vr-4);
    margin: var(--vr-6) 0 0;
}
/* ... */

